--- a/k8s/integration-service-deployment.yaml
+++ b/k8s/integration-service-deployment.yaml
@@ -14,6 +14,27 @@ spec:
       labels:
         app: integration-service
     spec:
+      initContainers:
+      - name: wait-for-postgres
+        image: busybox:1.36
+        command:
+        - sh
+        - -c
+        - |
+          until nc -z -w 2 postgres-service 5432; do
+            echo "waiting for postgres-service:5432";
+            sleep 2;
+          done
+      - name: wait-for-kafka
+        image: busybox:1.36
+        command:
+        - sh
+        - -c
+        - |
+          until nc -z -w 2 kafka-service 9092; do
+            echo "waiting for kafka-service:9092";
+            sleep 2;
+          done
       containers:
       - name: integration-service
         image: integration-service:latest
